# IoTEYE_API

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  keywords.txt  main.cpp
Headers/: IoTEYE_API.h  export.h
Sources/: IoTEYE_API.cpp  IoTEYE_API.hpp
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/: IoTEYELiterals.h  IoTEYE_API.h  IoTeyeEsp8266.h  IoTeyeString.h  payload.h
include/ioteyeapi/: ioteyeapi.hpp
source/: ioteyeapi.cpp
src/: IoTEYE_API.cpp  IoTeyeString.cpp  payload.cpp
test/: CMakeLists.txt
test/source/: ioteyeapi_test.cpp
utility/: CMakeLists.txt  main.cpp
